# apify-facebook-ads-intel

./: .dockerignore  .gitignore  Dockerfile  README.md  idea.md  pyproject.toml
.actor/: actor.json  input_schema.json
src/: __init__.py  main.py  models.py  processors.py  scraper.py
tests/: test_processors.py
