[project]
name = "apify-facebook-ads-intel"
version = "0.1.0"
description = "Facebook Ads Library scraper delivering creative-level intelligence"
authors = [
    {name = "Firas Mosbahi"}
]
requires-python = "^3.10"
dependencies = [
    "apify (>=3.2.0,<4.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
